welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		{ if (Math.abs(nums(i)- nums(i+1))==5 & Math.abs(nums(i)- nums(i+2))=1)
                                                      ^